@@ -1,0 +1,65 @@
+.ig
+(C) Copyright IBM Corp. 2009
+                                                                                
+Permission is granted to make and distribute verbatim copies of
+this manual provided the copyright notice and this permission notice
+are preserved on all copies.
+                                                                                
+Permission is granted to copy and distribute modified versions of this
+manual under the conditions for verbatim copying, provided that the
+entire resulting derived work is distributed under the terms of a
+permission notice identical to this one.
+..
+
+.TH wbemcatX 1 "April 2009" "wbemcatX Version @PACKAGE_VERSION@"
+.SH NAME
+wbemcatX \- a multi-protocol CIM-XML client
+
+.SH SYNOPSIS
+.B wbemcatX
+[\fIoptions\fR] [\fIFILE\fR]
+.SH DESCRIPTION
+Utility to send raw CIM-XML request \fIFILE\fR to the a CIMOM and display
+the response/results. Default CIMOM is \fIhttp://localhost:5988\fR.
+If no input file is specified then get XML data from stdin.
+.SH OPTIONS
+.TP
+\fB\-t\fR, \fB\-\-protocol\fR=\fIPROTOCOL\fR
+Protocol with which to connect. Default=\fIhttp\fR
+.TP
+\fB\-h\fR, \fB\-\-host\fR=\fIHOSTNAME\fR
+Name of host running the CIMOM. Default=\fIlocalhost\fR
+.TP
+\fB\-p\fR, \fB\-\-port\fR=\fIPORT\fR
+Port that the CIMOM is listening on. Default=\fI5988\fR
+.TP
+\fB\-?\fR, \fB\-\-help\fR
+Display help message and exit.
+.SH PREREQUISITES
+.SH AUTHOR
+Sean Swehla <smswehla@linux.vnet.ibm.com>
+.SH CONTRIBUTORS
+.SH BUGS
+.PP
+The SBLIM project maintains a mailing list to which you should direct all
+questions regarding sfcb, sfcc, wbemcli, or any of the SBLIM providers.
+To subscribe to this mailing list visit
+.IP
+http://lists.sourceforge.net/lists/listinfo/sblim-issues
+.PP
+The SBLIM Project Bug tracking page can be found at
+.IP
+http://sourceforge.net/tracker/?group_id=128809&atid=712784
+.SH COPYRIGHT
+(C) Copyright IBM Corp. 2009
+.SH AVAILABILITY
+The Small-Footprint CIM Broker (sfcb) is a part of the SBLIM project.
+The most recent version is available on the web at
+.IP
+http://sblim.sourceforge.net/
+.SH "SEE ALSO"
+.BR xmltest(1)
+.BR wbemcat(1)
+
+
+
