@@ -1,6 +1,9 @@
 Changes in 1.3.4
 ================
 
+New features:
+- wbemcatX: Multi protocol version of wbemcat
+
 Bugs fixed:
 
 - 2592304 Memory leak in mofpp.c file.
